--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,9 @@
 										data-start="900"
 										data-easing="Power4.easeOut"
 										data-endeasing="Power4.easeIn">
-										<div class="tp-caption1-wd-1 tt-base-color">Bros</div>
-										<div class="tp-caption1-wd-2">Đồ án <br> cuối kì</div>
-										<div class="tp-caption1-wd-3">Môn học phát triển ứng dụng web</div>
+										<div class="tp-caption1-wd-1 tt-base-color">AOE</div>
+										<div class="tp-caption1-wd-2">Shop <br> online</div>
+										<div class="tp-caption1-wd-3">Thời trang cao cấp</div>
 										<div class="tp-caption1-wd-4"><a href="/products" target="_blank" class="btn btn-xl" data-text="Shop Now!">Mua sắm ngay!</a></div>
 									</div>
 								</li>
@@ -43,9 +43,9 @@
 										data-start="900"
 										data-easing="Power4.easeOut"
 										data-endeasing="Power4.easeIn">
-										<div class="tp-caption1-wd-1 tt-white-color">Website</div>
-										<div class="tp-caption1-wd-2 tt-white-color">Cửa hàng</div>
-										<div class="tp-caption1-wd-3 tt-white-color">Được xây dựng với express.js và ejs</div>
+										<div class="tp-caption1-wd-1 tt-white-color">AOE</div>
+										<div class="tp-caption1-wd-2 tt-white-color">Hàng chính hãng</div>
+										<div class="tp-caption1-wd-3 tt-white-color">Bảo hành và đổi trả</div>
 										<div class="tp-caption1-wd-4"><a href="/products" target="_blank" class="btn btn-xl" data-text="Shop Now!">Mua sắm ngay!</a></div>
 									</div>
 								</li>
@@ -114,12 +114,21 @@
 				<div class="col-sm-12 col-md-6">
 					<div class="row">
 						<div class="col-sm-6">
-							<a href="/products" class="tt-promo-box tt-one-child hover-type-2">
+							<!-- <a href="/products?isSale.status=true" class="tt-promo-box tt-one-child hover-type-2">
 								<img src="/images/loader.svg" data-src="/images/promo/index-promo-img-01.jpg" alt="">
 								<div class="tt-description">
 									<div class="tt-description-wrapper">
 										<div class="tt-background"></div>
 										<div class="tt-title-small">GIẢM GIÁ</div>
+									</div>
+								</div>
+							</a> -->
+							<a href="/taixiu" class="tt-promo-box tt-one-child hover-type-2">
+								<img src="/images/loader.svg" data-src="/images/promo/index-promo-img-01.jpg" alt="">
+								<div class="tt-description">
+									<div class="tt-description-wrapper">
+										<div class="tt-background"></div>
+										<div class="tt-title-small">CHƠI TÀI XỈU</div>
 									</div>
 								</div>
 							</a>
@@ -134,7 +143,7 @@
 							</a>
 						</div>
 						<div class="col-sm-6">
-							<a href="/products" class="tt-promo-box tt-one-child hover-type-2">
+							<a href="/products?gender=female" class="tt-promo-box tt-one-child hover-type-2">
 								<img src="/images/loader.svg" data-src="/images/promo/index-promo-img-03.jpg" alt="">
 								<div class="tt-description">
 									<div class="tt-description-wrapper">
@@ -149,7 +158,7 @@
 				<div class="col-sm-12 col-md-6">
 					<div class="row">
 						<div class="col-sm-6">
-							<a href="/products" class="tt-promo-box tt-one-child hover-type-2">
+							<a href="/products?gender=male" class="tt-promo-box tt-one-child hover-type-2">
 								<img src="/images/loader.svg" data-src="/images/promo/index-promo-img-04.jpg" alt="">
 								<div class="tt-description">
 									<div class="tt-description-wrapper">
