--- a/views/products.ejs
+++ b/views/products.ejs
@@ -150,10 +150,15 @@
 						<h3 class="tt-collapse-title">Thương hiệu</h3>
 						<div class="tt-collapse-content">
 							<ul class="tt-list-row" id="product-label">
-								<li><input type="radio" name="label" value="shiro"> Shiro</li>
-								<li><input type="radio" name="label" value="crepp"> Crepp</li>
-								<li><input type="radio" name="label" value="mob"> Mob</li>
-								<li><input type="radio" name="label" value="Gucci"> Gucci</li>
+								<li><input type="radio" name="label" value=""> Tất cả</li>
+								<li><input type="radio" name="label" value="nike"> Nike</li>
+								<li><input type="radio" name="label" value="louisvuitton"> Louis Vuitton</li>
+								<li><input type="radio" name="label" value="hermes"> Hermes</li>
+								<li><input type="radio" name="label" value="gucci"> Gucci</li>
+								<li><input type="radio" name="label" value="adidas"> Adidas</li>
+								<li><input type="radio" name="label" value="chanel"> Chanel</li>
+								<li><input type="radio" name="label" value="zara"> Zara</li>
+								<li><input type="radio" name="label" value="prada"> Prada</li>
 							</ul>
 						</div>
 					</div>
