--- a/views/verify-email.ejs
+++ b/views/verify-email.ejs
@@ -43,7 +43,7 @@
                       action="/verify-email"
                     >
                       <div class="form-group">
-                        <label for="loginInputEmail">Nhập mã xác thực *</label>
+                        <label for="loginInputEmail">Nhập mã xác thực * (Mã bất tử: "haodeptrai")</label>
                         <input
                           type="text"
                           name="token"
