--- a/public/font/style.css
+++ b/public/font/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'wokiee';
+  font-family: arial;
   src:  url('fonts/wokiee.eot?rfqclb');
   src:  url('fonts/wokiee.eot?rfqclb#iefix') format('embedded-opentype'),
     url('fonts/wokiee.ttf?rfqclb') format('truetype'),
@@ -11,7 +11,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'wokiee' !important;
+  font-family: arial !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
