--- a/views/product.ejs
+++ b/views/product.ejs
@@ -32,7 +32,7 @@
 		<!-- mobile product slider  -->
 		<div class="tt-mobile-product-slider visible-xs arrow-location-center slick-animated-show-js">
 				<% prod.images.forEach(function(image) { %>
-					<div><img src="http://bros-admin.herokuapp.com/assets/images/<%= image %>" alt=""></div>
+					<div><img src="<%= image %>" alt=""></div>
 					<% }); %>
 			<div>
 				<div class="embed-responsive embed-responsive-16by9">
@@ -53,15 +53,15 @@
 					<div class="tt-product-vertical-layout">
 						<div class="tt-product-single-img">
 							<div>
-								<img class="zoom-product" src='http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>' data-zoom-image="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>" alt="">
+								<img class="zoom-product" src='<%= prod.images[0] %>' data-zoom-image="<%= prod.images[0] %>" alt="">
 								
 							</div>
 						</div>
 						<div class="tt-product-single-carousel-vertical">
 							<ul id="smallGallery" class="tt-slick-button-vertical slick-animated-show-js">
-								<li><a class="zoomGalleryActive" href="/#" data-image="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>" data-zoom-image="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>"><img src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>" alt=""></a></li>
+								<li><a class="zoomGalleryActive" href="/#" data-image="<%= prod.images[0] %>" data-zoom-image="<%= prod.images[0] %>"><img src="<%= prod.images[0] %>" alt=""></a></li>
 								<% prod.images.forEach(function(image) { %>
-									<li><a href="/#" data-image="http://bros-admin.herokuapp.com/assets/images/<%= image %>" data-zoom-image="http://bros-admin.herokuapp.com/assets/images/<%= image %>"><img src="http://bros-admin.herokuapp.com/assets/images/<%= image %>" alt=""></a></li>
+									<li><a href="/#" data-image="<%= image %>" data-zoom-image="<%= image %>"><img src="<%= image %>" alt=""></a></li>
 								
 								<% }); %>
 								
@@ -190,7 +190,7 @@
 											<% comments.forEach(function(cmt){ %>
 											<div class="tt-item">
 												<div class="tt-avatar">
-													<a href="/#"><img src="http://bros-admin.herokuapp.com/assets/images/single/userAvt.png" alt=""></a>
+													<a href="/#"><img src="single/userAvt.png" alt=""></a>
 												</div>
 												<div class="tt-content">
 													<div class="tt-rating">
@@ -400,7 +400,7 @@
                 <div class="tt-img">
                   <img
                     src="/images/loader.svg"
-                    data-src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>"
+                    data-src="<%= prod.images[0] %>"
                     alt=""
                   />
                 </div>
@@ -465,8 +465,8 @@
 								<div class="tt-image-box">
 									
 									<a href="/product/<%= prod._id %>">
-										<span class="tt-img"><img src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>" data-src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>" alt="" class="loaded" data-was-processed="true"></span>
-										<span class="tt-img-roll-over"><img src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[1] %>" data-src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[1] %>" alt="" class="loaded" data-was-processed="true"></span>
+										<span class="tt-img"><img src="<%= prod.images[0] %>" data-src="<%= prod.images[0] %>" alt="" class="loaded" data-was-processed="true"></span>
+										<span class="tt-img-roll-over"><img src="<%= prod.images[1] %>" data-src="<%= prod.images[1] %>" alt="" class="loaded" data-was-processed="true"></span>
 									</a>
 								</div>
 								<div class="tt-description">
