--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,7 +27,7 @@
                     </div>
                     <div class="col-md-auto">
                         <ul class="tt-social-icon">
-                            <li><a class="icon-g-64" target="_blank" href="http://www.facebook.com/"></a></li>
+                            <li><a class="icon-g-64" target="_blank" href="http://www.facebook.com/nvh25102001"></a></li>
                             <li><a class="icon-h-58" target="_blank" href="http://www.facebook.com/"></a></li>
                             <li><a class="icon-g-66" target="_blank" href="http://www.twitter.com/"></a></li>
                             <li><a class="icon-g-67" target="_blank" href="http://www.google.com/"></a></li>
@@ -89,9 +89,9 @@
                                 </h4>
                                 <div class="tt-collapse-content">
                                     <address>
-                                        <p><span>We are:</span>Bros shop</p>
-                                        <p><span>About Us:</span><a href="https://brogrammers2527.github.io/default.html">Brogrammers2527</a></p>
-                                        <p><span>E-mail:</span> <a href="mailto:nocodenolife2527@gmail.com">nocodenolife2527@gmail.com</a></p>
+                                        <p><span>We are: </span>AOE Shop</p>
+                                        <p><span>About Us: </span><a href="#">vanhaodev</a></p>
+                                        <p><span>E-mail: </span> <a href="mailto:vanhao.dev@gmail.com">vanhao.dev@gmail.com</a></p>
                                     </address>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                         <div class="tt-col-item">
                             <!-- copyright -->
                             <div class="tt-box-copyright">
-                                &copy; 1712767
+                                &copy; 19CT114
                             </div>
                             <!-- /copyright -->
                         </div>
